# zashboard-wsf

./: .gitignore  CHANGELOG.md  README.md  UPSTREAM_UI_ISSUE.md  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
readme/: ANDROID_TUNNEL_BACKGROUND.md  MAINTENANCE.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.1.md  RELEASE_NOTES_v1.0.2.md
scripts/: build.mjs
src/: App.vue
src-tauri/: Cargo.toml  build.rs  open-release.keystore  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  safe_area.rs  ui_manager.rs
src/api/: index.ts  tunnel.ts  ui_manager.ts  updater.ts  upstream_navigation.ts
src/api/__tests__/: refactor_regression.test.ts  ui_manager.test.ts  upstream_navigation.test.ts
src/assets/: main.css  theme.css
src/components/connections/: ConnectionCard.tsx  ConnectionCardList.vue  ConnectionDetails.vue  ConnectionTable.vue
src/components/layout/: ActionGroup.vue  AppShell.vue  PageHeader.vue  SectionCard.vue  StatusChip.vue
src/components/logs/: LogsCard.vue
src/components/overview/: BasicCharts.vue  ChartsCard.vue  ConnectionHistory.vue  ConnectionStatus.vue  IPCheck.vue  NetworkCard.vue  ProviderTrafficOverview.vue  RuleHitCountCard.vue  TopologyCharts.vue
src/components/proxies/: LatencyTag.vue  ProxiesByProvider.vue  ProxiesContent.vue  ProxyGroup.vue  ProxyGroupForMobile.vue  ProxyGroupNow.vue  ProxyNodeCard.vue  ProxyProvider.vue
src/components/rules/: RuleCard.vue  RuleProvider.vue
src/components/settings/: AppUpdater.vue  BackendSettings.vue  ConnectionsSettings.vue  EditBackendModal.vue  (+11 more)
src/constant/: ui.ts
src/i18n/: en.ts  ru.ts  zh-tw.ts  zh.ts
src/router/: index.ts
src/types/: global.d.ts  index.d.ts
src/views/: HomePage.vue  SettingsPage.vue  SetupPage.vue
(+8 files in other folders)
