[package]
name = "zashboard-wsf"
version = "1.0.3-test.0"
description = "Native Zashboard - Mihomo Dashboard with Tunnel Support"
authors = ["lovitus"]
edition = "2021"

[lib]
name = "zashboard_wsf_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
flate2 = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "blocking"], default-features = false }
zip = "2"
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"
cocoa = "0.24"
core-foundation = "0.9"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk = "0.7"
